fix spacing on smaller screens

--- a/styles/contact_styles.css
+++ b/styles/contact_styles.css
@@ -12,13 +12,13 @@ html {
 
 @media (max-width: 70em) {
   html {
-    font-size: 55%;
+    font-size: 45%;
   }
 }
 
 @media (max-width: 65em) {
   html {
-    font-size: 50%;
+    font-size: 45%;
   }
 }
 
@@ -103,12 +103,12 @@ a {
 
 .contact-section > h2 {
   font-size: 9rem;
-  padding: 1.5em;
 }
 
 .contact-section > p {
   font-size: 4rem;
   font-style: italic;
+  margin-top: 2em;
 }
 
 .contact-links {
